<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/noInternet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:alpha="0.8"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_9sdp">
            <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_9sdp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:background="@drawable/ic_wifi"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/merah_sedang"/>
                <TextView
                    android:id="@+id/txt_koneksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tidak_ada_koneksi_internet"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_11sdp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_coba_lagi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_button_background"
                    android:backgroundTint="@color/biru_sedang"
                    android:text="@string/coba_lagi"
                    android:textColor="@color/colorWhite" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_keluar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_button_background"
                    android:backgroundTint="@color/merah_sedang"
                    android:text="@string/keluar"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>